--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Realtime Test</title>
-  <link rel="stylesheet" href="index.css">
-  <script defer type="module" src="index.js"></script>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Realtime Test</title>
+    <link rel="stylesheet" href="index.css" />
+    <script defer type="module" src="index.js"></script>
+  </head>
+  <body>
+    <div id="enter-name-window" class="active">
+      <div id="input-box">
+        <div id="input-fild"><input type="text" autocomplete="off" spellcheck="false" placeholder="Enter Your Name" id="name-input"></div>
+        <div id="enter-button">Enter</div>
+      </div>
+    </div>
+    <section id="user-contener">
+    </section>
+  </body>
 </html>
